Layout Shifting Fixed In Slider

--- a/packages/Webkul/Velocity/src/Resources/assets/sass/components/home.scss
+++ b/packages/Webkul/Velocity/src/Resources/assets/sass/components/home.scss
@@ -463,8 +463,6 @@ header #search-form > *:focus {
 .main-content-wrapper {
     @extend .fs14;
 
-    margin: 0;
-    margin-bottom: 60px;
     display: inline-block;
 
     > .row {
@@ -710,6 +708,10 @@ body::after {
 
 .container {
     max-width: 1300px !important;
+}
+
+.slider-container {
+    min-height: 400px;
 }
 
 .remove-padding-margin {
